--- a/app/locale/zh_CN.json
+++ b/app/locale/zh_CN.json
@@ -12,7 +12,7 @@
     "New connection has been rejected with reason: ": "连接被拒绝，原因：",
     "New connection has been rejected": "连接被拒绝",
     "Password is required": "请提供密码",
-    "noVNC encountered an error:": "noVNC 遇到一个错误：",
+    "noVNC encountered an error:": "玉屋云控 遇到一个错误：",
     "Hide/Show the control bar": "显示/隐藏控制栏",
     "Move/Drag Viewport": "拖放显示范围",
     "viewport drag": "显示范围拖放",
@@ -54,12 +54,12 @@
     "Remote Resizing": "远程调整大小",
     "Advanced": "高级",
     "Repeater ID:": "中继站 ID",
-    "WebSocket": "WebSocket",
+    "WebSocket": "连接设置",
     "Encrypt": "加密",
     "Host:": "主机：",
     "Port:": "端口：",
     "Path:": "路径：",
-    "Automatic Reconnect": "自动重新连接",
+    "Automatic Reconnect": "一段时间后自动重连",
     "Reconnect Delay (ms):": "重新连接间隔 (ms)：",
     "Logging:": "日志级别：",
     "Disconnect": "中断连接",
